--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <i class="fas fa-bars"></i>
             </div>
             <ul>
-                <li><a><button><i class="fa-solid fa-arrow-right-to-bracket"> </i> Login</button></a></li>
-                <li><p><i class="fas fa-home"></i> Home</p></li>
-                <li><p><i class="far fa-user"></i>Profile</p></li>
+                <li><a href="./components/login.html"><button><i class="fa-solid fa-arrow-right-to-bracket"> </i> Login</button></a></li>
+                <li><a href="./index.html"><p><i class="fas fa-home"></i> Home</p></a></li>
+                <li><a href="./components/profile.html"><p><i class="far fa-user"></i>Profile</p></a></li>
             </ul>
         </div>
     </nav>      
@@ -29,7 +29,7 @@
             <h1>Empowering and inspiring all students to excel as life long learners.</h1>
             <p>Be transparent. Let's build a community that allows hard questions and honest conversations so we can stir up transformation in one another</p>
             <div class="hero-button">
-                <button>Start solving</button>
+                <a href="./components/category.html"><button>Start solving</button></a>
             </div>
         </div>
         <div class="hero-image">
